# ewoms-numerics

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake  dune.module  ewoms-numerics.pc.in
art2dgf/: art2dgf.cc
cmake/modules/: EwomsNumericsMacros.cmake  FindPAPI.cmake
ewoms/numerics/common/: darcyfluxmodule.hh  diffusionmodule.hh  energymodule.hh  flux.hh  forchheimerfluxmodule.hh  multiphasebaseextensivequantities.hh  multiphasebasemodel.hh  multiphasebaseproblem.hh  multiphasebaseproperties.hh  quantitycallbacks.hh
ewoms/numerics/discretizations/common/: baseauxiliarymodule.hh  fvbaseadlocallinearizer.hh  fvbaseboundarycontext.hh  fvbaseconstraints.hh  fvbaseconstraintscontext.hh  fvbasediscretization.hh  fvbaseelementcontext.hh  fvbaseextensivequantities.hh  fvbasefdlocallinearizer.hh  fvbasegradientcalculator.hh  fvbaseintensivequantities.hh  fvbaselinearizer.hh  fvbaselocalresidual.hh  fvbasenewtonconvergencewriter.hh  fvbasenewtonmethod.hh  fvbaseprimaryvariables.hh  fvbaseproblem.hh  fvbaseproperties.hh  restrictprolong.hh
ewoms/numerics/discretizations/ecfv/: ecfvbaseoutputmodule.hh  ecfvdiscretization.hh  ecfvgridcommhandlefactory.hh  ecfvproperties.hh  ecfvstencil.hh
ewoms/numerics/discretizations/vcfv/: p1fegradientcalculator.hh  vcfvbaseoutputmodule.hh  vcfvdiscretization.hh  vcfvgridcommhandlefactory.hh  vcfvproperties.hh  vcfvstencil.hh
ewoms/numerics/io/: baseoutputmodule.hh  baseoutputwriter.hh  basevanguard.hh  cubegridvanguard.hh  dgfvanguard.hh  restart.hh  simplexvanguard.hh  structuredgridvanguard.hh  vtkblackoilenergymodule.hh  vtkblackoilmodule.hh  vtkblackoilpolymermodule.hh  vtkblackoilsolventmodule.hh  vtkcompositionmodule.hh  vtkdiffusionmodule.hh  vtkdiscretefracturemodule.hh  vtkenergymodule.hh  vtkmultiphasemodule.hh  vtkmultiwriter.hh  vtkphasepresencemodule.hh  vtkprimaryvarsmodule.hh  vtkscalarfunction.hh  vtktemperaturemodule.hh  vtktensorfunction.hh  vtkvectorfunction.hh
ewoms/numerics/linear/: bicgstabsolver.hh  blacklist.hh  combinedcriterion.hh  convergencecriterion.hh  domesticoverlapfrombcrsmatrix.hh  elementborderlistfromgrid.hh  fixpointcriterion.hh  foreignoverlapfrombcrsmatrix.hh  globalindices.hh  istlpreconditionerwrappers.hh  istlsolverwrappers.hh  istlsparsematrixadapter.hh  linearsolverreport.hh  matrixblock.hh  nullborderlistmanager.hh  overlappingbcrsmatrix.hh  overlappingblockvector.hh  overlappingoperator.hh  overlappingpreconditioner.hh  overlappingscalarproduct.hh  overlaptypes.hh  parallelamgbackend.hh  parallelbasebackend.hh  parallelbicgstabbackend.hh  parallelistlbackend.hh  residreductioncriterion.hh  superlubackend.hh  vertexborderlistfromgrid.hh  weightedresidreductioncriterion.hh
ewoms/numerics/models/blackoil/: blackoilboundaryratevector.hh  blackoilbrinemodules.hh  blackoildarcyfluxmodule.hh  blackoilenergymodules.hh  blackoilextbomodules.hh  blackoilextensivequantities.hh  blackoilfoammodules.hh  blackoilindices.hh  blackoilintensivequantities.hh  blackoillocalresidual.hh  blackoilmodel.hh  blackoilnewtonmethod.hh  blackoilonephaseindices.hh  blackoilpolymermodules.hh  blackoilprimaryvariables.hh  blackoilproblem.hh  blackoilproperties.hh  blackoilratevector.hh  blackoilsolventmodules.hh  blackoilssasolventmodules.hh  blackoiltwophaseindices.hh
ewoms/numerics/models/discretefracture/: discretefractureextensivequantities.hh  discretefractureintensivequantities.hh  discretefracturelocalresidual.hh  discretefracturemodel.hh  discretefractureprimaryvariables.hh  discretefractureproblem.hh  discretefractureproperties.hh  fracturemapper.hh
ewoms/numerics/models/flash/: flashboundaryratevector.hh  flashextensivequantities.hh  flashindices.hh  flashintensivequantities.hh  flashlocalresidual.hh  flashmodel.hh  flashprimaryvariables.hh  flashproperties.hh  flashratevector.hh
ewoms/numerics/models/immiscible/: immiscibleboundaryratevector.hh  immiscibleextensivequantities.hh  immiscibleindices.hh  immiscibleintensivequantities.hh  immisciblelocalresidual.hh  immisciblemodel.hh  immiscibleprimaryvariables.hh  immiscibleproperties.hh  immiscibleratevector.hh
ewoms/numerics/models/ncp/: ncpboundaryratevector.hh  ncpextensivequantities.hh  ncpindices.hh  ncpintensivequantities.hh  ncplocalresidual.hh  ncpmodel.hh  ncpnewtonmethod.hh  ncpprimaryvariables.hh  ncpproperties.hh  ncpratevector.hh
ewoms/numerics/nonlinear/: newtonmethod.hh  nullconvergencewriter.hh
ewoms/numerics/parallel/: gridcommhandles.hh  mpiutil.hh  threadedentityiterator.hh  threadmanager.hh
ewoms/numerics/utils/: basicproperties.hh  pffgridvector.hh  quadraturegeometries.hh  simulator.hh  start.hh
tests/: co2injection_flash_ecfv.cc  co2injection_flash_ni_ecfv.cc  co2injection_flash_ni_vcfv.cc  co2injection_flash_vcfv.cc  co2injection_immiscible_ecfv.cc  co2injection_immiscible_ni_ecfv.cc  co2injection_immiscible_ni_vcfv.cc  co2injection_immiscible_vcfv.cc  co2injection_ncp_ecfv.cc  co2injection_ncp_ni_ecfv.cc  co2injection_ncp_ni_vcfv.cc  co2injection_ncp_vcfv.cc  co2injection_pvs_ecfv.cc  co2injection_pvs_ni_ecfv.cc  co2injection_pvs_ni_vcfv.cc  co2injection_pvs_vcfv.cc  cuvette_pvs.cc  diffusion_flash.cc  diffusion_ncp.cc  diffusion_pvs.cc  finger_immiscible_ecfv.cc  finger_immiscible_vcfv.cc  fracture_discretefracture.cc  groundwater_immiscible.cc  infiltration_pvs.cc  lens_immiscible_ecfv_ad.cc  lens_immiscible_ecfv_ad.hh  lens_immiscible_ecfv_ad_23.cc  lens_immiscible_ecfv_ad_cu1.cc  lens_immiscible_ecfv_ad_cu2.cc  lens_immiscible_ecfv_ad_main.cc  lens_immiscible_vcfv_ad.cc  lens_immiscible_vcfv_fd.cc  lens_richards_ecfv.cc  lens_richards_vcfv.cc  obstacle_immiscible.cc  obstacle_ncp.cc  obstacle_pvs.cc  outflow_pvs.cc  powerinjection_darcy_ad.cc  (+10 more)
tests/problems/: co2injectionflash.hh  co2injectionproblem.hh  cuvetteproblem.hh  diffusionproblem.hh  fingerproblem.hh  fractureproblem.hh  groundwaterproblem.hh  infiltrationproblem.hh  lensproblem.hh  obstacleproblem.hh  outflowproblem.hh  powerinjectionproblem.hh  reservoirproblem.hh  richardslensproblem.hh  waterairproblem.hh
tutorial/: tutorial1.cc  tutorial1problem.hh
(+20 files in other folders)
